[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eventiq"
dynamic = ["version"]
description = "Publish/Subscribe asyncio framework for Python"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = [
    "python",
    "framework",
    "asyncio",
    "microservice",
    "event-driven",
    "cloud-events",
    "asyncapi",
]
authors = [{ name = "RaRhAeu", email = "rarha_eu@protonmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anyio>4.0,<5.0",
    "typer<1.0",
    "pydantic >2.0,<3",
    "pydantic-settings>2.0,<3",
    "pydantic-asyncapi==0.2.1",
]

[project.urls]
Documentation = "https://github.com/asynq-io/eventiq#readme"
Issues = "https://github.com/asynq-io/eventiq/issues"
Source = "https://github.com/asynq-io/eventiq"

[project.scripts]
eventiq = "eventiq.cli:cli"

[project.optional-dependencies]
nats = ["nats-py"]
rabbitmq = ["aio-pika"]
kafka = ["aiokafka"]
redis = ["redis"]

[tool.hatch.version]
path = "eventiq/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-sugar",
    "pytest-cov",
    "pytest-repeat",
    "pyyaml",
    "ruff",
    "mypy==1.13.0",
    "bandit",
    "nats-py",
    "aiokafka",
    "aio-pika",
    "redis",
    "watchfiles",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
check = [
    "ruff check ./eventiq",
    "ruff format --check ./eventiq",
    "mypy --install-types --non-interactive {args:eventiq tests}",
    "bandit -r ./eventiq",
]

[tool.coverage.run]
source_pkgs = ["eventiq"]
branch = true
parallel = true
omit = ["eventiq/__about__.py"]

[tool.coverage.paths]
package = ["eventiq"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=./eventiq"
testpaths = ["./tests"]
filterwarnings = "ignore::DeprecationWarning"

[tool.pyright]
venvPath = ".venv"
venv = "eventiq"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "A001",
    "A002",
    "A005",
    "ARG002",
    "ARG004",
    "ASYNC109",
    "ANN401",
    "B008",     # do not perform function calls in argument defaults
    "BLE001",
    "COM812",
    "D",
    "E501",     # line too long
    "FA100",
    "FBT001",
    "FBT002",
    "FBT003",
    "ISC001",
    "N818",
    "PLR0913",
    "PLR2004",
    "PTH123",
    "S108",
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN001", "ANN201"]
"examples/*" = ["S101", "ANN001", "ANN201", "INP001", "T201"]

[tool.bandit]
skips = ['B101']
